Updating IngredientsController, Adding Update and Delete Ingredients funcionality
