# recipe-api/docs/swagger.json
@@ -335,6 +335,58 @@
                 },
                 "summary": "Get a list of all ingredients",
                 "description": "Returns a list of all ingredients in API"
+            },
+            "post": {
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/new-ingredient"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "tags": [
+                    "ingredients"
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/new-ingredient"
+                                }
+                            }
+                        },
+                        "description": "Request has succeeded"
+                    },
+                    "201": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/new-ingredient"
+                                }
+                            }
+                        },
+                        "description": "New ingredient has been created. "
+                    },
+                    "400": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        },
+                        "description": "One or all params are missing. "
+                    },
+                    "500": {
+                        "description": "The server encountered an unexpected condition that prevented it from fulfilling the request."
+                    }
+                },
+                "summary": "Creates an ingredient",
+                "description": "Creates an new ingredient"
             }
         },
         "/ingredients/{id}": {
@@ -386,6 +438,44 @@
                 "operationId": "id1",
                 "summary": "Get full details of a ingredient",
                 "description": "Returns full details of given id ingredient"
+            },
+            "put": {
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "string"
+                            },
+                            "examples": {
+                                "Update data of an ingredient": {
+                                    "value": {
+                                        "id": "1",
+                                        "name": "cabbage",
+                                        "category": "vegetable",
+                                        "amount": "5"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "tags": [
+                    "ingredients"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Updates full details of a given id ingredient"
+                    },
+                    "404": {
+                        "description": "Ingredient was not found in ingediants array"
+                    },
+                    "500": {
+                        "description": "The server encountered an unexpected condition that prevented it from fulfilling the request"
+                    }
+                },
+                "summary": "Update ingredient details",
+                "description": "Update ingredient details"
             },
             "delete": {
                 "tags": [
